# py_element_math

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  cli.py  generator.py  main.py
app/static/: app.js  style.css
app/templates/: index.html
tests/: test_generator.py
